<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tableLayout"
    android:padding="6dp"
    android:stretchColumns="1,2,3"
    android:background="#90ffdd"
   >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Home_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/Home_value"
            android:textColor="#000"
            android:lines="2"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/HomevalueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span = "3"
            android:inputType="numberDecimal"
            android:hint="@string/zero"
            android:textSize="14sp"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/down_payment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/down_payment"
            android:textColor="#000"
            android:lines="2"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/downpaymentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span = "3"
            android:inputType="numberDecimal"
            android:hint="@string/zero"
            android:textSize="14sp"
            android:layout_weight="1"/>
    </TableRow>


    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rate"
            android:textColor="#000"
            android:lines="2"
            android:paddingRight="5dp"
            android:gravity="right|center_vertical"
            android:layout_weight="0"/>
        <EditText
            android:id="@+id/rateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span = "3"
            android:inputType="numberDecimal"
            android:text="@string/percent"
            android:textSize="14sp"
            android:layout_weight="1"/>


    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/terms"
            android:textColor="#000"
            android:lines="2"

            android:layout_weight="0"/>
         <Spinner
            android:id="@+id/year_array"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:entries="@array/year_array"
             android:prompt="@string/select"
             android:textColor="#000"
             android:lines="2"
             android:spinnerMode="dropdown" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/property_tax"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/property_tax"
            android:textColor="#000"
            android:lines="2"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/property_taxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span = "3"
            android:inputType="numberDecimal"
            android:hint="@string/percent"
            android:textSize="14sp"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_column = "1"
        android:layout_weight="0"
        android:id="@+id/calculate" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="sendMessage"
        android:layout_column = "2"
        android:layout_weight="0"
        android:id="@+id/reset" />

    </TableRow>
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/monthly_payment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/monthly_payment"
            android:textColor="#000"
            android:lines="2"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/monthlypaymentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span = "3"
            android:inputType="numberDecimal"
            android:hint="@string/zero"
            android:textSize="14sp"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/total_interest_paid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/total_interest_paid"
            android:textColor="#000"
            android:lines="2"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/total_interest_paidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span = "3"
            android:inputType="numberDecimal"
            android:hint="@string/zero"
            android:textSize="14sp"
            android:layout_weight="1"/>
    </TableRow>



    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/total_property_tax_paid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/total_property_tax_paid"
            android:textColor="#000"
            android:lines="2"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/total_property_tax_paidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span = "3"
            android:inputType="numberDecimal"
            android:hint="@string/zero"
            android:textSize="14sp"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/pay_off_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/payoff_data"
            android:textColor="#000"
            android:lines="2"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/pay_off_dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span = "3"
            android:inputType="numberDecimal"
            android:text="@string/zeroInt"
            android:textSize="14sp"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>